--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
