--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "expo": "~51.0.21",
+    "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0",
-    "expo-checkbox": "~3.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
